--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,15 +37,25 @@ android {
         dataBinding true
     }
     namespace 'com.example.noticeme'
+
+    lintOptions{
+        baseline file("lint_baseline.xml")
+    }
 }
 
 dependencies {
 
+    //noinspection GradleDependency
     implementation 'androidx.core:core-ktx:1.7.0'
+    //noinspection GradleDependency
     implementation 'androidx.appcompat:appcompat:1.5.1'
+    //noinspection GradleDependency
     implementation 'com.google.android.material:material:1.6.1'
+    //noinspection GradleDependency
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    //noinspection GradleDependency
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
+    //noinspection GradleDependency
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
     implementation("com.tbuonomo:dotsindicator:4.3")
     implementation 'com.google.firebase:firebase-analytics-ktx:21.2.0'
@@ -68,7 +78,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-common-java8:2.5.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
 
+    //noinspection GradleDependency,GradleDependency
     // Kotlin components
+    //noinspection GradleDependency,DifferentStdlibGradleVersion
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.7.10"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
